p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
spec:
  ingressClassName: traefik
  rules:
   - host: "app1.com"
     http:
       paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app1
              port:
                number: 80
   - host: "app2.com"
     http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app2
              port:
                number: 80
   - host: "app3.com"
     http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app3
              port:
                number: 80
